--- a/todo-old/report/templates/OP_Liste.jrxml
+++ b/todo-old/report/templates/OP_Liste.jrxml
@@ -338,7 +338,7 @@
 					<bottomPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement>
+				<textElement markup="html">
 					<font fontName="Tahoma" size="11"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Inhalt}]]></textFieldExpression>
